--- a/index.html
+++ b/index.html
@@ -1,11 +1,114 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Normasense</title>
+  <title>Normasense — Smart Norms, Smarter Living</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+      color: white;
+    }
+
+    header {
+      padding: 40px 20px;
+      text-align: center;
+    }
+
+    header h1 {
+      font-size: 2.5em;
+      margin-bottom: 10px;
+    }
+
+    header p {
+      font-size: 1.1em;
+      opacity: 0.9;
+    }
+
+    .cta {
+      margin-top: 30px;
+    }
+
+    .cta a {
+      display: inline-block;
+      padding: 15px 30px;
+      background: #00e6a8;
+      color: #003333;
+      text-decoration: none;
+      font-weight: bold;
+      border-radius: 30px;
+    }
+
+    section {
+      padding: 50px 20px;
+      max-width: 900px;
+      margin: auto;
+    }
+
+    section h2 {
+      text-align: center;
+      margin-bottom: 30px;
+    }
+
+    .features {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+    }
+
+    .feature {
+      background: rgba(255,255,255,0.1);
+      padding: 20px;
+      border-radius: 15px;
+    }
+
+    footer {
+      text-align: center;
+      padding: 20px;
+      font-size: 0.9em;
+      opacity: 0.7;
+    }
+  </style>
 </head>
+
 <body>
-  <h1>Bienvenue sur Normasense</h1>
-  <p>Chaque jour, un pas vers une meilleure version de toi.</p>
+
+<header>
+  <h1>Normasense</h1>
+  <p>Comprendre les normes. Simplifier le monde. Accéder à l’essentiel.</p>
+
+  <div class="cta">
+    <a href="#">Commencer l’essai gratuit</a>
+  </div>
+</header>
+
+<section>
+  <h2>Pourquoi Normasense ?</h2>
+
+  <div class="features">
+    <div class="feature">
+      <h3>📘 Normes simplifiées</h3>
+      <p>Accédez aux normes expliquées clairement, sans jargon inutile.</p>
+    </div>
+
+    <div class="feature">
+      <h3>🌍 Accessible partout</h3>
+      <p>Un accès mondial, pensé pour tous les pays et toutes les langues.</p>
+    </div>
+
+    <div class="feature">
+      <h3>⏱ Gain de temps</h3>
+      <p>Plus besoin de chercher pendant des heures : l’essentiel est là.</p>
+    </div>
+  </div>
+</section>
+
+<footer>
+  © 2026 Normasense — Tous droits réservés
+</footer>
+
 </body>
 </html>
