--- a/index.html
+++ b/index.html
@@ -1,107 +1,36 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Normasense</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
-      color: white;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-    }
-
-    .container {
-      background: rgba(0, 0, 0, 0.35);
-      padding: 30px;
-      border-radius: 16px;
-      max-width: 420px;
-      width: 90%;
-      text-align: center;
-    }
-
-    h1 {
-      margin-bottom: 10px;
-    }
-
-    p {
-      opacity: 0.9;
-      margin-bottom: 20px;
-    }
-
-    button {
-      background: #00c6ff;
-      border: none;
-      padding: 12px 20px;
-      border-radius: 25px;
-      font-size: 16px;
-      cursor: pointer;
-      color: #000;
-      font-weight: bold;
-    }
-
-    textarea {
-      width: 100%;
-      height: 100px;
-      border-radius: 10px;
-      border: none;
-      padding: 10px;
-      font-size: 14px;
-      margin-top: 15px;
-    }
-
-    .hidden {
-      display: none;
-    }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
 </head>
-
 <body>
 
-  <!-- ÉCRAN 1 : ACCUEIL -->
-  <div class="container" id="home">
+  <main class="container">
     <h1>Normasense</h1>
-    <p>Comprendre la vie, un pas à la fois.</p>
+    <p class="subtitle">Comprendre la vie, un pas à la fois</p>
 
-    <p><em>Le futur se construit par les choix silencieux d’aujourd’hui.</em></p>
+    <section class="card">
+      <p id="reflection">
+        Le futur se construit par les choix silencieux d’aujourd’hui.
+      </p>
+      <button onclick="newReflection()">Nouvelle réflexion</button>
+    </section>
 
-    <button onclick="entrer()">Entrer</button>
-  </div>
+    <section class="interaction">
+      <h2>Exprime ton doute</h2>
+      <textarea id="userInput" placeholder="Écris ce qui te trouble..."></textarea>
+      <button onclick="analyzeThought()">Clarifier</button>
+      <p id="response"></p>
+    </section>
+  </main>
 
-  <!-- ÉCRAN 2 : DOUTE -->
-  <div class="container hidden" id="doute">
-    <h1>Exprime ton doute</h1>
-    <p>Écris ce qui te trouble. Sans jugement.</p>
+  <footer>
+    © 2026 Normasense — Le chemin se construit chaque jour
+  </footer>
 
-    <textarea id="texteDoute" placeholder="Qu’est-ce qui te préoccupe en ce moment ?"></textarea>
-
-    <button onclick="continuer()">Continuer</button>
-  </div>
-
-  <script>
-    function entrer() {
-      document.getElementById("home").classList.add("hidden");
-      document.getElementById("doute").classList.remove("hidden");
-    }
-
-    function continuer() {
-      const doute = document.getElementById("texteDoute").value;
-
-      if (doute.trim() === "") {
-        alert("Prends un instant pour écrire ton doute.");
-        return;
-      }
-
-      localStorage.setItem("douteUtilisateur", doute);
-      alert("Ton doute a été enregistré. Nous allons l’éclairer ensemble.");
-    }
-  </script>
-
+  <script src="script.js"></script>
 </body>
 </html>
